<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="app_name">Gateway2</string>
    <string name="account_empty">用户名为空，请重新输入</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入</string>
    <string name="pwd_no_equal">密码不匹配，请重新输入密码</string>
    <string name="register_fail">注册失败，该用户名已经存在</string>
    <string name="register_success">注册成功！</string>
    <string name="test">test yes</string>
    <string name="login_success">登陆成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="device_setting">设备管理</string>
    <string name="user_setting">用户管理</string>
    <string name="gateway_setting">设备添加</string>
    <string name="login">登录</string>
    <string name="input_pwd">请输入密码</string>
    <string name="register_btn">注册</string>
    <string name="remember_pwd">记住密码</string>
    <string name="input_account">请输入账号</string>
    <string name="gateway">gateway</string>
    <string name="changepwd">修改密码</string>
    <string name="input_changedpwd">请输入修改后的密码</string>
    <string name="input_changedpwd_again">请再次输入修改后的密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="logout">注销</string>
    <string name="changePwd">修改密码</string>
    <string name="userImg">userImg</string>
    <string name="changedPwdSuccess">修改密码成功</string>
    <string name="changedPwdFail">修改密码失败</string>
    <string name="add_device">添加设备</string>
    <string name="changedPwd_not_equal">修改的密码两次不匹配</string>
    <string name="pwd_error">密码错误</string>
    <string name="addDevice">添加设备</string>
    <string name="chooseAddDevice">请选择要添加的设备</string>
    <string name="deviceSNum">设备序号</string>
    <string name="addDeviceSuccess">添加设备成功</string>
    <string name="addDeviceFail">添加设备失败</string>
    <string name="getFileFail">获取设备信息失败</string>
    <string name="initDeviceFail">初始化设备失败</string>
    <string name="getSNumFail">获取设备序号错误</string>
    <string name="insertDeviceFail">插入数据库失败</string>
    <string name="getDeviceData">获取用户数据</string>
    <string name="getDataFail">获取设备失败，请检查网络</string>
    <string name="getDataSuccess">获取设备数据成功</string>



</resources>
