<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

<!--    <fragment-->
<!--        android:id="@+id/fragment"-->
<!--        android:name="com.example.gateway2.UserSetting_Fragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        tools:layout="@layout/usersetting_fragment" />-->


    <FrameLayout
        android:id="@+id/frag_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00ACACAC">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gatewaysetting"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gateway_setting" />

        <Button
            android:id="@+id/devicesetting"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/device_setting" />

        <Button
            android:id="@+id/usersetting"
            android:layout_width="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_setting" />
    </LinearLayout>

</LinearLayout>